# pseudocompiler_old

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  code_of_conduct.md  index.html  manifest.json  precache-manifest.0a7337b23a2b5c1f34438a5e9877c7c3.js  precache-manifest.0b80d96275e9f2ca420277d87e96fd60.js  precache-manifest.1954bf9f3b7379d5cdbbb8a87177ef26.js  precache-manifest.1d1a4df177a4c151e5600757b30c9ba8.js  precache-manifest.34c1f74ebf65b4b34cff49fcde922e82.js  precache-manifest.54831b89adec54e235da19501ace5f11.js  precache-manifest.658e126a57cba7a81e83f007befb7e2a.js  precache-manifest.77a0204f2624dc98e6530af7d1b73224.js  precache-manifest.81bc0a1336f4ed6140db8be59fe44288.js  precache-manifest.876d739f6a63322075b0bc7ee4d69635.js  precache-manifest.94259c22a7530100baeeee056ffddf64.js  precache-manifest.98db17aebe53ef7f2b1604ec0640bb5f.js  precache-manifest.9ce4a11b45959df0271c17a50aeacedd.js  precache-manifest.ae05a5b4be5f505979830a44cd5060b1.js  precache-manifest.b43188dff764079f2cc2365e5eca0001.js  precache-manifest.bcb6a4b0895dbc4123d163f38889c802.js  precache-manifest.c201835b3132358ced5592a6bbe97bb4.js  precache-manifest.cba99a7ed24a3f64bf9ce26feb19fb78.js  precache-manifest.d31076ce1085b6876dd7dd9bf79783a7.js  rustfmt.toml  rustmt.toml  service-worker.js
.github/workflows/: CI.yml  build.yml  greetings.yml  test.yml  tests.yml
app/: README.md  index.js  package-lock.json  package.json
app/public/: CNAME  index.html
app/src/: App.css  App.js
src/: lib.rs
src/parser/: helpers.rs  lexer.rs  mod.rs  parser.rs
web_interface/: package.json
(+96 files in other folders)
